--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -104,6 +104,7 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid grey;
+    padding: 20px 20px 20px 20px;
 
 }
 .Footerfooter{
@@ -114,7 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
     font-size: 18px;
     font-weight: smaller;
 }
@@ -146,6 +147,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 20px;
     /* background-color: aqua; */
     gap: 5px;
 }
@@ -157,15 +159,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    /* padding-right: 20px;
-    margin-top: 10px; */
+    /* justify-content: center; */
+    padding-right: 20px;
+    margin-top: 10px;
 }
 .FooterMidText h3{
-    transition: all 350ms ease-in-out;
-    transform: scaleY(1);
+    /* transition: all 350ms ease-in-out; */
+    /* transform: scaleY(1); */
     color: white;
     cursor: pointer;
+    font-size: 16px;
 }
 
 .FooterMidText h3:hover{
@@ -178,6 +181,7 @@
     transform: scaleY(1);
     color: white;
     cursor: pointer;
+    font-size: 13px;
 }
 
 .FooterMidText  p:hover{
