--- a/src/components/header2.css
+++ b/src/components/header2.css
@@ -1,7 +1,7 @@
 .Headerwrapper2{
     width: 100%;
     height: 5vh;
-    display: flex;
+    display: block;
     flex-direction: row;
     align-items: center;
     background-color: white;
@@ -119,4 +119,12 @@
     .stickyicons i:hover {
     color: red;
     transform: rotateY(180deg);
+  }
+
+
+  @media  screen and (max-width: 769px) {
+    .Headerwrapper2{
+        display: none;
+    }
+    
   }
