--- a/src/pages/Auth/login.css
+++ b/src/pages/Auth/login.css
@@ -190,3 +190,82 @@
     cursor: pointer;
   }
   
+
+  @media screen and (max-width: 480px) {
+    .login-container{
+      width: 100%;
+      height: 100vh;
+      /* background-color: aqua; */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+
+    }
+
+    .login-form{
+      width: 80%;
+     height: 60%; 
+     /* background-color: blueviolet; */
+    }
+
+    .textlogin{
+      width: 100%;
+      height: 15%;
+      /* background-color: green; */
+    }
+
+    .login-title{
+      /* background-color: antiquewhite; */
+      font-size: 16px;
+      font-weight: 600;
+
+    }
+
+    .login-subtitle{
+      font-size: 14px;
+      font-weight: 300;
+    }
+
+    .middletext{
+     width: 100%;
+     height: 60%;
+     /* background-color: brown; */
+    }
+
+    .login-label{
+      /* background-color: chartreuse; */
+      padding: 4px;
+    }
+
+    .login-input{
+      /* background-color: cornflowerblue; */
+      width: 94%;
+      height: 20px;
+    }
+
+    .eye-icon{
+      position: absolute;
+      right: 13%;
+      top: 57%;
+    }
+
+    .keepmelogedinandpassword{
+      /* background: #000; */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .loginfooteer{
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: flex-start;
+    }
+
+    /* .signup-text{
+      text-align: left;
+    } */
+  }
