--- a/src/pages/Auth/signUp.css
+++ b/src/pages/Auth/signUp.css
@@ -120,3 +120,30 @@
     text-decoration: underline;
   }
   
+
+  @media screen and (max-width: 480px) {
+    .signup-container{
+      width: 100%;
+      height: 100vh;
+      background-color: white;
+    }
+
+    .signup-form{
+      width: 75%;
+      height: 70%;
+
+    }
+     
+    .signupfooter{
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: flex-start;
+      padding-left: 10px;
+    }
+
+    .signup-button{
+      width: 50%;
+    }
+
+  }
