--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,11 +1,10 @@
 .Headerwrapper{
     width: 100%;
     height: 15vh;
-    display: block;
-    flex-direction: row;
+    display: flex;
     align-items: center;
-    background-color: white;
-    justify-content: space-around;
+    justify-content: center;
+    background-color: white; 
     /* border-bottom: 1px solid grey; */
 }
 
